<resources>
    <string name="app_name">Football Score Counter</string>
    <string name="team_a_name">Team A</string>
    <string name="team_b_name">Team B</string>
    <string name="score_team_a">0</string>
    <string name="goal_team_a">Goal</string>
    <string name="red_card_team_a">Red Card</string>
    <string name="yellow_card_team_a">Yellow Card</string>
    <string name="score_team_b">0</string>
    <string name="goal_team_b">Goal</string>
    <string name="red_card_team_b">Red Card</string>
    <string name="yellow_card_team_b">Yellow Card</string>
    <string name="reset_button">Reset</string>
    <string name="red_cards_team_a">Penalty</string>
    <string name="number_red_cards_team_a">0</string>
    <string name="yellow_cards_team_a">Penalty</string>
    <string name="number_yellow_cards_team_a">0</string>
    <string name="red_cards_team_b">Penalty</string>
    <string name="number_red_cards_team_b">0</string>
    <string name="yellow_cards_team_b">Penalty</string>
    <string name="number_yellow_cards_team_b">0</string>
    </resources>
